--- a/netflix-client/package.json
+++ b/netflix-client/package.json
@@ -3,16 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "firebase": "^9.0.2",
     "fuse.js": "^6.4.6",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "3.4.0",
     "styled-components": "^5.3.1",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
@@ -44,6 +41,7 @@
   "jest": {
     "collectCoverageFrom": [
       "<rootDir>/src/**/*.js",
+      "!<rootDir>/src/app.js",
       "!<rootDir>/src/index.js",
       "!<rootDir>/src/seed.js",
       "!<rootDir>/src/global-styles.js",
@@ -64,5 +62,10 @@
       "html",
       "text"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10"
   }
 }
